@@ -1,20 +1,34 @@
 ﻿<Properties>
   <MonoDevelop.Ide.Workspace ActiveConfiguration="Release" />
-  <MonoDevelop.Ide.Workbench ActiveDocument="libtitania-standard/Titania/Math/Numbers/Quaternion.h">
+  <MonoDevelop.Ide.Workbench ActiveDocument="libtitania-x3d/Titania/X3D/Components/Text/X3DFontStyleNode.cpp">
     <Files>
       <File FileName="experimental/main.cpp" Line="494" Column="1" />
-      <File FileName="libtitania-standard/Titania/Math/Numbers/Rotation4.h" Line="591" Column="78" />
-      <File FileName="libtitania-standard/Titania/Math/Numbers/Quaternion.h" Line="742" Column="11" />
-      <File FileName="libtitania-standard/Titania/Math/Algorithms/SquadInterpolator.h" Line="62" Column="19" />
-      <File FileName="libtitania-x3d/Titania/X3D/Components/Interpolation/SquadOrientationInterpolator.h" Line="144" Column="40" />
-      <File FileName="libtitania-x3d/Titania/X3D/Components/Interpolation/SquadOrientationInterpolator.cpp" Line="100" Column="29" />
-      <File FileName="Library/Tests/Interpolation/SquadOrientationInterpolator.wrl" Line="45" Column="4" />
-      <File FileName="libtitania-standard/Titania/Math/Functional.h" Line="129" Column="12" />
-      <File FileName="libtitania-standard/Titania/Math/Algorithms/SquadInterpolator.cpp" Line="55" Column="1" />
+      <File FileName="Library/Tests/Rendering/TriangleFanSet.wrl" Line="9" Column="1" />
+      <File FileName="libtitania-x3d/Titania/X3D/Components/Rendering/TriangleFanSet.h" Line="100" Column="37" />
+      <File FileName="libtitania-x3d/Titania/X3D/Components/Rendering/TriangleFanSet.cpp" Line="144" Column="5" />
+      <File FileName="libtitania-x3d/Titania/X3D/Components/Rendering/TriangleStripSet.h" Line="100" Column="37" />
+      <File FileName="libtitania-x3d/Titania/X3D/Components/Rendering/TriangleStripSet.cpp" Line="95" Column="17" />
+      <File FileName="libtitania-x3d/Titania/X3D/Components/Rendering/TriangleSet.cpp" Line="73" Column="64" />
+      <File FileName="Library/Tests/Rendering/TriangleStripSet.wrl" Line="16" Column="18" />
+      <File FileName="libtitania-x3d/Titania/X3D/Components/Geometry3D/IndexedFaceSet.cpp" Line="295" Column="1" />
+      <File FileName="libtitania-x3d/Titania/X3D/Components/Rendering/X3DGeometryNode.cpp" Line="91" Column="34" />
+      <File FileName="libtitania-x3d/Titania/X3D/Components/Text/FontStyle.cpp" Line="1" Column="1" />
+      <File FileName="libtitania-x3d/Titania/X3D/Components/Text/X3DFontStyleNode.cpp" Line="150" Column="1" />
+      <File FileName="libtitania-x3d/Titania/X3D/Components/Text/Text.cpp" Line="1" Column="1" />
+      <File FileName="libtitania-x3d/Titania/X3D/Parser/Parser.cpp" Line="1280" Column="3" />
+      <File FileName="libtitania-x3d/Titania/X3D/Basic/X3DBaseNode.cpp" Line="219" Column="1" />
+      <File FileName="libtitania-x3d/Titania/X3D/Components/Scripting/Script.cpp" Line="91" Column="1" />
+      <File FileName="libtitania-x3d/Titania/X3D/JavaScript/SpiderMonkey/JavaScriptContext.cpp" Line="623" Column="1" />
+      <File FileName="libtitania-x3d/Titania/X3D/JavaScript/JavaScriptEngine.h" Line="74" Column="12" />
+      <File FileName="libtitania-x3d/Titania/X3D/JavaScript/JavaScriptEngine.cpp" Line="52" Column="1" />
+      <File FileName="libtitania-x3d/Titania/X3D/Browser/X3DBrowserContext.h" Line="131" Column="21" />
     </Files>
     <Pads>
       <Pad Id="ProjectPad">
         <State expanded="True">
+          <Node name="miscellaneous" expanded="True">
+            <Node name="logo" expanded="True" />
+          </Node>
           <Node name="experimental" expanded="True" />
           <Node name="Library" expanded="True">
             <Node name="Examples" expanded="True">
@@ -45,9 +59,7 @@
               <Node name="Basic" expanded="True" />
               <Node name="Math" expanded="True">
                 <Node name="Algorithms" expanded="True" />
-                <Node name="Numbers" expanded="True">
-                  <Node name="Quaternion.h" selected="True" />
-                </Node>
+                <Node name="Numbers" expanded="True" />
               </Node>
             </Node>
           </Node>
@@ -64,15 +76,13 @@
                   <Node name="CADGeometry" expanded="True" />
                   <Node name="Geometry2D" expanded="True" />
                   <Node name="Geometry3D" expanded="True" />
-                  <Node name="Geospatial" expanded="True" />
                   <Node name="Grouping" expanded="True" />
-                  <Node name="Interpolation" expanded="True" />
-                  <Node name="Networking" expanded="True" />
-                  <Node name="NURBS" expanded="True" />
-                  <Node name="PointingDeviceSensor" expanded="True" />
                   <Node name="Rendering" expanded="True" />
                   <Node name="Scripting" expanded="True" />
                   <Node name="Shaders" expanded="True" />
+                  <Node name="Text" expanded="True">
+                    <Node name="X3DFontStyleNode.cpp" selected="True" />
+                  </Node>
                 </Node>
                 <Node name="Execution" expanded="True" />
                 <Node name="Fields" expanded="True" />
@@ -108,6 +118,7 @@
               <Node name="UserInterfaces" expanded="True" />
             </Node>
           </Node>
+          <Node name="x3dtidy" expanded="True" />
         </State>
       </Pad>
       <Pad Id="ClassPad">
