@@ -1,3 +1,7 @@
+2013-05-30  Holger Seelig  <holger.seelig@yahoo.de>
+
+	* Titania.userprefs: 
+
 2013-05-29  Holger Seelig  <holger.seelig@yahoo.de>
 
 	* Titania.usertasks: 
